--- a/professional.html
+++ b/professional.html
@@ -23,93 +23,96 @@
 </div>
 <h2>Committee Member of Conferences</h2>
 <ul>
-<li><p>2017, Reviewer, <a href="www.springer.com/computer/ai/journal/10994" target=&ldquo;blank&rdquo;>Machine Learning Journal</a> (MLJ).</p>
+<li><p>Program committee, <b>Neural Information Processing Systems (NeurIPS/NIPS): 2015, 2019</b></p>
 </li>
-<li><p>2017, Reviewer, <a href="http://acml-conf.org/2017/" target=&ldquo;blank&rdquo;>Asian Conference on Machine Learning</a> (ACML).</p>
+<li><p>Program committee, <b>International Conference on Machine Learning (ICML): 2015, 2019</b></p>
 </li>
-<li><p>2017, External Reviewer, <a href="http://icml.cc/2017/" target=&ldquo;blank&rdquo;>International Conference on Machine Learning</a> (ICML).</p>
+<li><p>Reviewer, <b>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</b></p>
 </li>
-<li><p>2017, External Reviewer, <a href="www.kdd.org/kdd2017/" target=&ldquo;blank&rdquo;>ACM SIGKDD Conference on Knowledge Discovery and Data Mining</a> (KDD).</p>
+<li><p>Reviewer, Data Mining and Knowledge Discovery Journal (DMKD): 2016(1), 2017(1)</p>
 </li>
-<li><p>2016, External Reviewer, <a href="http://www.aistats.org/" target=&ldquo;blank&rdquo;>International Conference on Artificial Intelligence and Statistics</a> (AISTATS).</p>
+<li><p>Program Committee, International Joint Conference on Artificial Intelligence (IJCAI): 2018-2019</p>
 </li>
-<li><p>2016, External Reviewer, <a href="http://www.aaai.org/Conferences/AAAI/aaai17.php" target=&ldquo;blank&rdquo;>AAAI Conference on Artificial Intelligence</a> (AAAI).</p>
-</li>
-<li><p>2016, External Reviewer, <a href="https://nips.cc/Conferences/2016" target=&ldquo;blank&rdquo;>Neural Information Processing Systems</a> (NIPS).</p>
-</li>
-<li><p>2016, Reviewer, <a href="link/springer.com/journal/10618" target=&ldquo;blank&rdquo;>Data Mining and Knowledge Discovery Journal</a> (DMKD).</p>
-</li>
-<li><p>2016, Reviewer, <a href="http://acml-conf.org/2016/" target=&ldquo;blank&rdquo;>Asian Conference on Machine Learning</a> (ACML).</p>
-</li>
-<li><p>2016, External Reviewer, <a href="http://icml.cc/2016/" target=&ldquo;blank&rdquo;>International Conference on Machine Learning</a> (ICML).</p>
-</li>
-<li><p>2016, External Reviewer, <a href="www.kdd.org/kdd2016/" target=&ldquo;blank&rdquo;>ACM SIGKDD Conference on Knowledge Discovery and Data Mining</a> (KDD).</p>
-</li>
-<li><p>2015, Reviewer, <a href="https://nips.cc/Conferences/2015" target=&ldquo;blank&rdquo;>Neural Information Processing Systems</a> (<b>NIPS</b>).</p>
-</li>
-<li><p>2015, Program Committee, <a href="http://acml-conf.org/2015/acml.php" target=&ldquo;blank&rdquo;>Asian Conference on Machine Learning</a> (ACML).</p>
-</li>
-<li><p>2015, Program Committee, <a href="http://icml.cc/2015/" target=&ldquo;blank&rdquo;>International Conference on Machine Learning</a> (<b>ICML</b>).</p>
-</li>
-<li><p>2014, Program Committee, <a href="http://www.acml2014.jvn.edu.vn" target=&ldquo;blank&rdquo;>Asian Conference on Machine Learning</a> (ACML).</p>
-</li>
-<li><p>2013, Program Committee, <a href="http://acml2013.conference.nicta.com.au" target=&ldquo;blank&rdquo;>Asian Conference on Machine Learning</a> (ACML).</p>
+<li><p>Program Committee, Asian Conference on Machine Learning (ACML): 2013-2019</p>
 </li>
 </ul>
-<h2>Teaching Assistant &amp; Lecturer</h2>
+<h2>External Reviewer</h2>
+<ul>
+<li><p>Neural Information Processing Systems (<b>NIPS</b>): 2016, 2018</p>
+</li>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2016-2018</p>
+</li>
+<li><p>Machine Learning Journal (<b>MLJ</b>): 2018(1)</p>
+</li>
+<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2016, 2018</p>
+</li>
+<li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD): 2016, 2017</p>
+</li>
+<li><p>AAAI Conference on Artificial Intelligence (AAAI): 2016</p>
+</li>
+<li><p>The Web Conference (WWW): 2018, 2019</p>
+</li>
+<li><p>International Conference on Information and Knowledge Management (CIKM): 2017</p>
+</li>
+</ul>
+<h2>Member of Organizing Team</h2>
+<ul>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.</p>
+</li>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/trendsinML/" target=&ldquo;blank&rdquo;>Trends in Machine Learning workshop, Kyoto, Japan, 2014</a>.</p>
+</li>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2012</a>.</p>
+</li>
+</ul>
+<h2>Teaching Assistant</h2>
 <p><b><a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University</a></b> <br /></p>
 <ul>
-<li><p>2015, Perspective in Informatics, Informatics Seminar. (TA - MSc)</p>
+<li><p>2015, Perspective in Informatics, Informatics Seminar. (MSc)</p>
 </li>
-<li><p>2013, Large Scale Optimization and Machine Learning, Marco Cuturi. (TA - MSc)</p>
+<li><p>2013, Large Scale Optimization and Machine Learning, Marco Cuturi. (MSc)</p>
 </li>
-<li><p>2013, Pattern Recognition Advances, Marco Cuturi. (TA - MSc)</p>
+<li><p>2013, Pattern Recognition Advances, Marco Cuturi. (MSc)</p>
 </li>
-<li><p>2013, Statistical Machine Learning, Marco Cuturi &amp; Akihiro Yamamoto. (TA - MSc)</p>
+<li><p>2013, Statistical Machine Learning, Marco Cuturi &amp; Akihiro Yamamoto. (MSc)</p>
 </li>
 </ul>
 <p><b><a href="http://www.jvn.edu.vn" target=&ldquo;blank&rdquo;>John von Neumann Institute (JVN)</a></b> <br /></p>
 <ul>
-<li><p>2012, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy. (TA - MSc)</p>
+<li><p>2012, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy. (MSc)</p>
 </li>
-<li><p>2011, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy. (TA - MSc)</p>
+<li><p>2011, Introduction to Linear Systems, Giuseppe Calafiore - Politecnico di Torino, Italy. (MSc)</p>
 </li>
 </ul>
 <p><b><a href="http://www.fit.hcmus.edu.vn/vn/Default.aspx?tabid=325" target=&ldquo;blank&rdquo;>University of Science, VNU-HCMC</a></b> <i>(Selected)</i> <br /></p>
 <ul>
-<li><p>2012, Machine Learning, Marco Cuturi - Kyoto University, Japan. (TA)</p>
+<li><p>2012, Machine Learning, Marco Cuturi - Kyoto University, Japan. (Undergrad)</p>
 </li>
-<li><p>2012, Game Theory, Multi-agents and social algorithm, Thuc Vu - Google Inc, USA. (TA)</p>
+<li><p>2012, Game Theory, Multi-agents and social algorithm, Thuc Vu - Google Inc, USA. (Undergrad)</p>
 </li>
-<li><p>2011, Optimization Models for Engineering, Laurent El Ghaoui - University of California, Bekerley, USA. (TA)</p>
+<li><p>2011, Optimization Models for Engineering, Laurent El Ghaoui - University of California, Bekerley, USA. (Undergrad)</p>
 </li>
 </ul>
-<h2>Miscellaneous</h2>
+<h2>Summer School</h2>
 <ul>
-<li><p>Organizing team, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.</p>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.</p>
 </li>
-<li><p>Participant, <a href="https://nips.cc/Conferences/2014/" target=&ldquo;blank&rdquo;>Neural Information Processing Systems (NIPS), Montreal, Canada, 2014</a>.</p>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS series), Kyoto, Japan, 2012</a>.</p>
 </li>
-<li><p>Organizing team, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/trendsinML/" target=&ldquo;blank&rdquo;>Trends in Machine Learning workshop, Kyoto, Japan, 2014</a>.</p>
+<li><p><a href="http://mlss2011.comp.nus.edu.sg/" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS series), Singapore, 2011</a>.</p>
 </li>
-<li><p>Organizing team, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2012</a>.</p>
+</ul>
+<h2>Conference</h2>
+<ul>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018, 2019.</p>
 </li>
-<li><p>Student, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS series), Kyoto, Japan, 2012</a>.</p>
+<li><p>Neural Information Processing Systems (<b>NIPS/NeurIPS</b>): 2014, 2017, 2018.</p>
 </li>
-<li><p>Student, <a href="http://mlss2011.comp.nus.edu.sg/" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS series), Singapore, 2011</a>.</p>
-</li>
-<li><p>Student, Introduction to Optimization, Laurent El Ghaoui - University of California, Bekerley, USA, 2010.</p>
-</li>
-<li><p>Student, Optimization &amp; Kernel Method, Marco Cuturi - Princeton University, USA, 2010</p>
-</li>
-<li><p>Student, Machine Learning, David McAllester - Toyota Technological Institute, Chicago, USA, 2009.</p>
-</li>
-<li><p>Student, <a href="http://dspss.vef.gov" target=&ldquo;blank&rdquo;>Digital Signal Processing Summer School</a>, Minh N. Do (UIUC), Douglas Jones (UIUC), Truong Nguyen (UCSD), Trac Tran (John Hopkins University), 2008.</p>
+<li><p>Conference on Learning Theory (<b>COLT</b>): 2018.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 14:45:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 15:05:23 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
