--- a/professional.html
+++ b/professional.html
@@ -21,7 +21,17 @@
 <div id="toptitle">
 <h1>Tam Le - Professional Activities</h1>
 </div>
-<h2>Committee Member of Conferences</h2>
+<h2>Professional Services</h2>
+<p><b>Member of Organizing Team</b></p>
+<ul>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.</p>
+</li>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/trendsinML/" target=&ldquo;blank&rdquo;>Trends in Machine Learning workshop, Kyoto, Japan, 2014</a>.</p>
+</li>
+<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2012</a>.</p>
+</li>
+</ul>
+<p><b>Committee Member of Conferences</b></p>
 <ul>
 <li><p>Program committee, <b>Neural Information Processing Systems (NeurIPS/NIPS): 2015, 2019</b></p>
 </li>
@@ -36,7 +46,7 @@
 <li><p>Program Committee, Asian Conference on Machine Learning (ACML): 2013-2019</p>
 </li>
 </ul>
-<h2>External Reviewer</h2>
+<p><b>External Reviewer</b></p>
 <ul>
 <li><p>Neural Information Processing Systems (<b>NIPS</b>): 2016, 2018</p>
 </li>
@@ -53,15 +63,6 @@
 <li><p>The Web Conference (WWW): 2018, 2019</p>
 </li>
 <li><p>International Conference on Information and Knowledge Management (CIKM): 2017</p>
-</li>
-</ul>
-<h2>Member of Organizing Team</h2>
-<ul>
-<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.</p>
-</li>
-<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/trendsinML/" target=&ldquo;blank&rdquo;>Trends in Machine Learning workshop, Kyoto, Japan, 2014</a>.</p>
-</li>
-<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2012</a>.</p>
 </li>
 </ul>
 <h2>Teaching Assistant</h2>
@@ -92,7 +93,8 @@
 <li><p>2011, Optimization Models for Engineering, Laurent El Ghaoui - University of California, Bekerley, USA. (Undergrad)</p>
 </li>
 </ul>
-<h2>Summer School</h2>
+<h2>Summer Schools and Conferences</h2>
+<p><b>Summer Schools</b></p>
 <ul>
 <li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.</p>
 </li>
@@ -101,7 +103,7 @@
 <li><p><a href="http://mlss2011.comp.nus.edu.sg/" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS series), Singapore, 2011</a>.</p>
 </li>
 </ul>
-<h2>Conference</h2>
+<p><b>Conferences</b></p>
 <ul>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018, 2019.</p>
 </li>
@@ -112,7 +114,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 15:05:23 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 15:08:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
