--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h1>Tam Le</h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="TamLe.jpg"><img src="TamLe.jpg" alt="Tam Le" width="150px" height="150px" /></a>&nbsp;</td>
+<a href="TamLeANU13.png"><img src="TamLeANU16.png" alt="Tam Le" width="150px" height="150px" /></a>&nbsp;</td>
 <td align="left"><p>(a.k.a. Lê Thanh Tâm) <br />
 Postdoctoral Researcher <br />
 <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br /></p>
@@ -136,7 +136,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 15:17:32 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 15:19:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
