--- a/publication.html
+++ b/publication.html
@@ -32,14 +32,15 @@
 <li><p><b>Tam Le</b>, Marco Cuturi, <i>Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</i>, Machine Learning Journal (<b>MLJ</b>), 2014. [<a href="https://www.dropbox.com/s/ag7hy2v7wdilu4j/TL.MC.MLJ2014.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>]</p>
 </li>
 </ul>
-<h2>Preprints / Technical reports</h2>
+<h2>Others</h2>
+<p><b>Preprints / Technical reports</b></p>
 <ul>
 <li><p><b>Tam Le</b>, Makoto Yamada, Kenji Fukumizu, Marco Cuturi, <i>Tree-Sliced Variants of Wasserstein Distances</i>, ArXiv 1902.00342 [<a href="https://arxiv.org/pdf/1902.00342.pdf" target=&ldquo;blank&rdquo;>ArXiv</a>]</p>
 </li>
 <li><p>Tatsuya Shiraishi, <b>Tam Le</b>, Hisashi Kashima, Makoto Yamada, <i>Topological Bayesian Optimization with Persistence Diagrams</i>, ArXiv 1902.09722 [<a href="https://arxiv.org/pdf/1902.09722.pdf" target=&ldquo;blank&rdquo;>ArXiv</a>]</p>
 </li>
 </ul>
-<h2>Other Journals / Conference papers</h2>
+<p><b>Other Journals / Conference papers</b></p>
 <ul>
 <li><p>Randy Jalem, Masanobu Nakayama, Yusuke Noda, <b>Tam Le</b>, Ichiro Takeuchi, Yoshitaka Tateyama, Hisatsugu Yamazaki, <i>A General Representation Scheme for Crystalline Solids based on Voronoi-Tessellation Real Feature Values and Atomic Property Data</i>, Science and Technology of Advance Materials Journal, 2018. [[https:<i></i>www.tandfonline.com<i>doi</i>full<i>10.1080</i>14686996.2018.1439253</p>
 </li>
@@ -52,12 +53,13 @@
 <li><p><b>Tam Le</b>, Son Tran, Seichii Mita, Thuc Nguyen, <i>Realtime Traffic Sign Detection Using Color and Shape-Based Features</i>, The 2nd Asian Conference on Intelligent Information and Database Systems (ACIIDS), LNAI 5991, Vietnam, 2010 (oral). [<a href="https://www.dropbox.com/s/987ev6ok1dtatyj/TamLe-ACIIDS10.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>]</p>
 </li>
 </ul>
-<h2>Thesis</h2>
+<p><b>Thesis</b></p>
 <ul>
 <li><p><i><b>Geometry-Aware Learning Algorithms for Histogram Data Using Adaptive Metric Embeddings and Kernel Functions</b></i>, PhD thesis, Kyoto University, Japan, 2015. [[https:<i></i>repository.kulib.kyoto-u.ac.jp<i>dspace</i>bitstream<i>2433</i>204594<i>2</i>djohk00596.pdf PDF]</p>
 </li>
 </ul>
-<h2>Workshop Posters</h2>
+<h2>Workshop Posters / Talks</h2>
+<p><b>Workshop Posters</b></p>
 <ul>
 <li><p>2019, <i>Tree-Sliced Approximation of Wasserstein Distances</i>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>, Korea. [<a href="https://www.dropbox.com/s/pym938fkamamgyo/TLMYKFMC_KJworkshop19_Tree-SlicedWasserstein.pdf?dl=0" target=&ldquo;blank&rdquo;>Poster</a>]</p>
 </li>
@@ -72,7 +74,7 @@
 <li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation)</i>. <a href="http://cap2018.litislab.fr/Programme-en.html" target=&ldquo;blank&rdquo;>Conference Sur L'Apprentissage Automatique (CAp)</a>, France, 2018.</p>
 </li>
 </ul>
-<h2>Talks</h2>
+<p><b>Talks</b></p>
 <ul>
 <li><p>2016, <i>Geometry-Aware Metric Learning for Histograms</i>, <a href="http://www.nims.go.jp/MII-I/event/h6g4rf000000034y-att/h6g4rf000000036n.pdf" target=&ldquo;blank&rdquo;>MI2I Open Seminar Series</a>, National Institute for Materials Science, Tsukuba, Japan. [<a href="https://www.dropbox.com/s/o6nrtzh39si8u7p/TamLe_NIMS_June2016.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]</p>
 </li>
@@ -87,7 +89,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 15:21:50 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 15:25:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
