--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="professional.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="honor.html">Honors&nbsp;&amp;&nbsp;Awards</a></div>
-<div class="menu-item"><a href="code.html">Code</a></div>
+<div class="menu-item"><a href="code.html">Code&nbsp;&amp;&nbsp;Datasets</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -136,7 +136,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 15:25:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 15:29:02 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
