--- a/publication.html
+++ b/publication.html
@@ -69,7 +69,7 @@
 </li>
 <li><p>2018, <i>Riemannian Manifold Kernel for Persistence Diagrams*</i>, <a href="https://sites.google.com/view/aip-fau-mlgt-2018/home" target=&ldquo;blank&rdquo;>Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization</a>, USA. </p>
 </li>
-<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>Optimal Approximation for regularization and validation path</i>. <a href="http://smai-mode2018.imag.fr" target=&ldquo;blank&rdquo;>Journees SMAI MODE</a>, France, 2018. [http:<i></i>smai-mode2018.imag.fr<i>resumes</i>resumesLong/subm26.pdf PDF]</p>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>Optimal Approximation for regularization and validation path</i>. <a href="http://smai-mode2018.imag.fr" target=&ldquo;blank&rdquo;>Journees SMAI MODE</a>, France, 2018. [<a href="http://smai-mode2018.imag.fr/resumes/resumesLong/subm26.pdf" target=&ldquo;blank&rdquo;>PDF</a>]</p>
 </li>
 <li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation)</i>. <a href="http://cap2018.litislab.fr/Programme-en.html" target=&ldquo;blank&rdquo;>Conference Sur L'Apprentissage Automatique (CAp)</a>, France, 2018.</p>
 </li>
@@ -89,7 +89,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 15:29:02 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 15:30:55 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
