--- a/publication.html
+++ b/publication.html
@@ -55,7 +55,7 @@
 </ul>
 <p><b>Thesis</b></p>
 <ul>
-<li><p><i><b>Geometry-Aware Learning Algorithms for Histogram Data Using Adaptive Metric Embeddings and Kernel Functions</b></i>, PhD thesis, Kyoto University, Japan, 2015. [[https:<i></i>repository.kulib.kyoto-u.ac.jp<i>dspace</i>bitstream<i>2433</i>204594<i>2</i>djohk00596.pdf PDF]</p>
+<li><p><i><b>Geometry-Aware Learning Algorithms for Histogram Data Using Adaptive Metric Embeddings and Kernel Functions</b></i>, PhD thesis, Kyoto University, Japan, 2015. [<a href="https://repository.kulib.kyoto-u.ac.jp/dspace/bitstream/2433/204594/2/djohk00596.pdf" target=&ldquo;blank&rdquo;>PDF</a>]</p>
 </li>
 </ul>
 <h2>Workshop Posters / Talks</h2>
@@ -89,7 +89,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 15:30:55 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 15:32:05 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
