--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 </li>
 <li><p>01-Sep-2017, Join in High-Dimensional Statistical Unit, RIKEN AIP as a postdoctoral researcher.</p>
 </li>
-<li><p>05-Apr-2017, Our proposal has been accepted by the Grants-in-Aid for Young Scientists (B) as PI (04<i>2017 - 03</i>2020).</p>
+<li><p>05-Apr-2017, Our proposal has been accepted by the Grants-in-Aid for Young Scientists (B) as PI (04/2017 - 03/2020).</p>
 </li>
 </ul>
 <h2>Research Support</h2>
@@ -136,7 +136,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 15:42:00 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 21:21:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
