--- a/professional.html
+++ b/professional.html
@@ -33,11 +33,11 @@
 </ul>
 <p><b>Committee Member of Conferences</b></p>
 <ul>
-<li><p>Program committee, <b>Neural Information Processing Systems (NeurIPS/NIPS): 2015, 2019</b></p>
+<li><p>Program committee, <i>Neural Information Processing Systems</i> <b>(NeurIPS/NIPS): 2015, 2019</b></p>
 </li>
-<li><p>Program committee, <b>International Conference on Machine Learning (ICML): 2015, 2019</b></p>
+<li><p>Program committee, <i>International Conference on Machine Learning</i> <b>(ICML): 2015, 2019</b></p>
 </li>
-<li><p>Reviewer, <b>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</b></p>
+<li><p>Reviewer, <i>Machine Learning Journal</i> <b>(MLJ): 2017(1), 2018(1), 2019(1)</b></p>
 </li>
 <li><p>Reviewer, Data Mining and Knowledge Discovery Journal (DMKD): 2016(1), 2017(1)</p>
 </li>
@@ -48,7 +48,7 @@
 </ul>
 <p><b>External Reviewer</b></p>
 <ul>
-<li><p>Neural Information Processing Systems (<b>NIPS</b>): 2016, 2018</p>
+<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2016, 2018</p>
 </li>
 <li><p>International Conference on Machine Learning (<b>ICML</b>): 2016-2018</p>
 </li>
@@ -105,16 +105,16 @@
 </ul>
 <p><b>Conferences</b></p>
 <ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018, 2019.</p>
-</li>
 <li><p>Neural Information Processing Systems (<b>NIPS/NeurIPS</b>): 2014, 2017, 2018.</p>
+</li>
+<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018, 2019.</p>
 </li>
 <li><p>Conference on Learning Theory (<b>COLT</b>): 2018.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 15:42:00 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 21:21:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
