--- a/professional.html
+++ b/professional.html
@@ -33,11 +33,11 @@
 </ul>
 <p><b>Committee Member of Conferences</b></p>
 <ul>
-<li><p>Program committee, <i>Neural Information Processing Systems</i> <b>(NeurIPS/NIPS): 2015, 2019</b></p>
+<li><p>Program committee, Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019</p>
 </li>
-<li><p>Program committee, <i>International Conference on Machine Learning</i> <b>(ICML): 2015, 2019</b></p>
+<li><p>Program committee, International Conference on Machine Learning (<b>ICML</b>): 2015, 2019</p>
 </li>
-<li><p>Reviewer, <i>Machine Learning Journal</i> <b>(MLJ): 2017(1), 2018(1), 2019(1)</b></p>
+<li><p>Reviewer, Machine Learning Journal (<b>MLJ</b>): 2017(1), 2018(1), 2019(1)</p>
 </li>
 <li><p>Reviewer, Data Mining and Knowledge Discovery Journal (DMKD): 2016(1), 2017(1)</p>
 </li>
@@ -114,7 +114,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 21:21:56 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-05-30 23:09:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
