--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated April, 2019.</p>
 <h2>News</h2>
 <ul>
+<li><p>11-Jul-2019, Talk on &ldquo;Kernel methods for Persistence Diagrams: A Geometric Approach&rdquo; at Institute for Advanced Study, Kyoto University.</p>
+</li>
 <li><p>25-Apr-2019, Python code for our <a href="https://icml.cc/" target=&ldquo;blank&rdquo;>ICML&rsquo;19</a> (Safe Grid Search with Optimal Complexity) is available <a href="https://github.com/lttam/safe_grid_search" target=&ldquo;blank&rdquo;>[Github]</a>, coded by Eugene Ndiaye.</p>
 </li>
 <li><p>22-Apr-2019, Our paper, entitled <a href="https://arxiv.org/pdf/1810.05471.pdf" target=&ldquo;blank&rdquo;>&ldquo;Safe Grid Search with Optimal Complexity&rdquo;</a> has been accepted to <a href="https://icml.cc/" target=&ldquo;blank&rdquo;>ICML&rsquo;19</a>. This is joint work with Eugene Ndiaye, Olivier Fercoq, Joseph Salmon and Ichiro Takeuchi.</p>
@@ -48,9 +50,9 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 </li>
 <li><p>05-Sep-2018, Our paper, entitled <a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;>&ldquo;Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams&rdquo;</a> has been accepted to <a href="https://nips.cc" target=&ldquo;blank&rdquo;>NeurIPS&rsquo;18</a>!  </p>
 </li>
-<li><p>01-Sep-2017, Join in High-Dimensional Statistical Unit, RIKEN AIP as a postdoctoral researcher.</p>
+<li><p>01-Sep-2017, Joined in High-Dimensional Statistical Unit, RIKEN AIP as a postdoctoral researcher.</p>
 </li>
-<li><p>05-Apr-2017, Our proposal has been accepted by the Grants-in-Aid for Young Scientists (B) as PI (04/2017 - 03/2020).</p>
+<li><p>05-Apr-2017, Our proposal has been accepted by the Grants-in-Aid for Young Scientists (B) as PI (04<i>2017 - 03</i>2020).</p>
 </li>
 </ul>
 <h2>Research Support</h2>
@@ -136,7 +138,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 23:09:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-06-25 22:14:53 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
