--- a/publication.html
+++ b/publication.html
@@ -23,9 +23,9 @@
 </div>
 <h2>Selected Journals / Conference papers</h2>
 <ul>
-<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>Safe Grid Search with Optimal Complexity</i>, to appear in International Conference on Machine Learning (<b>ICML</b>), US, 2019. [<a href="https://arxiv.org/abs/1810.05471" target=&ldquo;blank&rdquo;>ArXiv</a>/<a href="https://github.com/lttam/safe_grid_search" target=&ldquo;blank&rdquo;>Code</a>] (Acceptance rate: 773/3424=22.6%)</p>
+<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>Safe Grid Search with Optimal Complexity</i>, International Conference on Machine Learning (<b>ICML</b>), U.S., 2019. [<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://proceedings.mlr.press/v97/ndiaye19a/ndiaye19a-supp.pdf" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/f4appwq8sghnz31/poster_icml2019_ndiaye_final.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] (Acceptance rate: 773/3424=22.6%)</p>
 </li>
-<li><p><b>Tam Le</b>, Makoto Yamada, <i>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</i>, The 32nd Conference on Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), Canada, 2018. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] (Acceptance rate: 1011/4856=20.8%)</p>
+<li><p><b>Tam Le</b>, Makoto Yamada, <i>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</i>, The 32nd Conference on Neural Information Processing Systems (<b>NeurIPS/NIPS</b>), Canada, 2018. [<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams-supplemental.zip" target=&ldquo;blank&rdquo;>Supplementary</a>/<a href="https://www.dropbox.com/s/o99zja0qtzpdzci/TLMY_NIPS18_PFKernel_PD.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] (Acceptance rate: 1011/4856=20.8%)</p>
 </li>
 <li><p><b>Tam Le</b>, Marco Cuturi, <i>Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Transformations</i>, International Conference on Machine Learning (<b>ICML</b>), France, 2015. [<a href="http://videolectures.net/icml2015_le_histograms/?q=Tam\\%20Le" target=&ldquo;blank&rdquo;>Video</a>/<a href="http://proceedings.mlr.press/v37/le15.pdf" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://proceedings.mlr.press/v37/le15-supp.pdf" target=&ldquo;blank&rdquo;>Supplemental</a>/<a href="https://www.dropbox.com/s/vj4gsgnazrhlvdt/TL.MC.ICML2015.Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>/<a href="https://www.dropbox.com/s/4zboqoil7gwn3i1/TL.MC.ICML2015.Poster.pdf?dl=0" target=&ldquo;blank&rdquo;>POSTER</a>] (Acceptance rate: 270/1037 = 26.0%)</p>
 </li>
@@ -67,7 +67,7 @@
 </li>
 <li><p>2018, <i>Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</i>, <a href="http://gimli.cc/2018/" target=&ldquo;blank&rdquo;>ICML workshops (Geometry in Machine Learning)</a>, Sweden. [<a href="https://www.dropbox.com/s/r6mabb120909khd/gimli_icml18_v04.pdf?dl=0" target=&ldquo;blank&rdquo;>PDF</a>/<a href="http://papers.nips.cc/paper/8205-persistence-fisher-kernel-a-riemannian-manifold-kernel-for-persistence-diagrams.html" target=&ldquo;blank&rdquo;>a longer version at NeurIPS/NIPS&rsquo;18</a>]</p>
 </li>
-<li><p>2018, <i>Riemannian Manifold Kernel for Persistence Diagrams*</i>, <a href="https://sites.google.com/view/aip-fau-mlgt-2018/home" target=&ldquo;blank&rdquo;>Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization</a>, USA. </p>
+<li><p>2018, <i>Riemannian Manifold Kernel for Persistence Diagrams</i>, <a href="https://sites.google.com/view/aip-fau-mlgt-2018/home" target=&ldquo;blank&rdquo;>Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization</a>, USA. </p>
 </li>
 <li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <i>Optimal Approximation for regularization and validation path</i>. <a href="http://smai-mode2018.imag.fr" target=&ldquo;blank&rdquo;>Journees SMAI MODE</a>, France, 2018. [<a href="http://smai-mode2018.imag.fr/resumes/resumesLong/subm26.pdf" target=&ldquo;blank&rdquo;>PDF</a>]</p>
 </li>
@@ -89,7 +89,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-05-30 23:09:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-06-25 22:14:54 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
