--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Yoshida Honmachi, Sakyo-ku, Kyoto, 606-8501, Japan.</p>
 My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=0" target=&ldquo;blank&rdquo;>here</a> - Updated April, 2019.</p>
 <h2>News</h2>
 <ul>
-<li><p>11-Jul-2019, Talk on &ldquo;Kernel methods for Persistence Diagrams: A Geometric Approach&rdquo; at Institute for Advanced Study, Kyoto University.</p>
+<li><p>11-Jul-2019, <a href="https://www.dropbox.com/s/gejiyhbjfcpfk4t/2019July_TDA_GeometricKernel.pdf?dl=0" target=&ldquo;blank&rdquo;>Slides</a> for my presentation (Kernel methods for Persistence Diagrams: A Geometric Approach) at Institute for Advanced Study, Kyoto University.</p>
 </li>
 <li><p>25-Apr-2019, Python code for our <a href="https://icml.cc/" target=&ldquo;blank&rdquo;>ICML&rsquo;19</a> (Safe Grid Search with Optimal Complexity) is available <a href="https://github.com/lttam/safe_grid_search" target=&ldquo;blank&rdquo;>[Github]</a>, coded by Eugene Ndiaye.</p>
 </li>
@@ -57,12 +57,12 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 </ul>
 <h2>Research Support</h2>
 <ul>
-<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K1274</a> (Grants-in-Aid for Young Scientists (B) as PI). </p>
+<li><p>04/2017 - 03/2020, <a href="https://www.jsps.go.jp/english/e-grants/grants01.html" target=&ldquo;blank&rdquo;>JSPS KAKENHI Grant number 17K1274</a>, Grants-in-Aid for Young Scientists (B) as PI (4M JPY). </p>
 </li>
 </ul>
 <h2>Education</h2>
 <ul>
-<li><p>10/2012 - 09/2015, PhD program, <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Graduate school of Informatics</a>, <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>. [<a href="http://en.wikipedia.org/wiki/Kyoto_University#Academic_rankings" target=&ldquo;blank&rdquo;><b>Ranking</b></a>]</p>
+<li><p>10/2012 - 09/2015, PhD program, <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Graduate school of Informatics</a>, <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>.</p>
 <ul>
 <li><p>Supervisors: <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;>Professor <b>Marco</b> <b>Cuturi</b></a>, <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;>Professor <b>Akihiro</b> <b>Yamamoto</b></a>.</p>
 </li>
@@ -84,12 +84,12 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 </ul>
 <h2>Research Experience</h2>
 <ul>
-<li><p>09/2017 - present, Postdoctoral Researcher, <a href="http://www.riken.jp/en/research/labs/aip/generic_tech/highdim_stat_model/" target=&ldquo;blank&rdquo;>High-Dimensional Statistical Modeling Unit</a>, Generic Technology Research Group, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
+<li><p>09/2017 - present, Postdoctoral Researcher, <a href="http://www.riken.jp/en/research/labs/aip/generic_tech/highdim_stat_model/" target=&ldquo;blank&rdquo;>High-Dimensional Statistical Modeling Unit</a>, <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.</p>
 <ul>
 <li><p>Mentor: <a href="https://riken-yamada.github.io/profile.html" target=&ldquo;blank&rdquo;>Professor Makoto Yamada</a></p>
 </li></ul>
 </li>
-<li><p>02/2016 - 08/2017, Postdoctoral Researcher, <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology, Japan</a> and <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>.</p>
+<li><p>02/2016 - 08/2017, Postdoctoral Researcher, <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology, Japan</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>.</p>
 <ul>
 <li><p>Mentor: <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Professor Ichiro Takeuchi</a>.</p>
 </li></ul>
@@ -107,29 +107,21 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <li><p>01/2014 - 02/2014, Internship student, <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
 <ul>
 <li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.</p>
-</li>
-<li><p>Subject: Ground metric learning</p>
 </li></ul>
 </li>
 <li><p>03/2013, Internship student at <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.</p>
 <ul>
 <li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.</p>
-</li>
-<li><p>Subject: Some methods in optimization and machine learning.</p>
 </li></ul>
 </li>
 <li><p>08/2010 - 02/2011, Internship student, <a href="http://www.nii.ac.jp/en/" target=&ldquo;blank&rdquo;>National Institute of Informatics, Tokyo, Japan</a>.</p>
 <ul>
 <li><p>Supervisor: <a href="http://research.nii.ac.jp/~sugimoto/" target=&ldquo;blank&rdquo;>Professor Akihiro Sugimoto</a></p>
-</li>
-<li><p>Project: Image Categorization using Kernel Methods.</p>
 </li></ul>
 </li>
 <li><p>04/2009 - 06/2009, Internship student, <a href="http://www.toyota-ti.ac.jp/" target=&ldquo;blank&rdquo;>Toyota Technological Institute of Nagoya, Japan</a>.</p>
 <ul>
 <li><p>Supervisor: <a href="http://www.ttic.edu/mita.php" target=&ldquo;blank&rdquo;>Professor Seiichi Mita</a></p>
-</li>
-<li><p>Project: Autonomous driving system (Module: Real time traffic sign detection).</p>
 </li>
 </ul>
 
@@ -138,7 +130,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-06-25 22:14:53 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-07-16 12:20:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
