--- a/professional.html
+++ b/professional.html
@@ -33,11 +33,11 @@
 </ul>
 <p><b>Committee Member of Conferences</b></p>
 <ul>
-<li><p>Program committee, <b>Neural Information Processing Systems (NeurIPS/NIPS): 2015, 2019</b></p>
+<li><p>Program committee, Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2015, 2019</p>
 </li>
-<li><p>Program committee, <b>International Conference on Machine Learning (ICML): 2015, 2019</b></p>
+<li><p>Program committee, International Conference on Machine Learning (<b>ICML</b>): 2015, 2019</p>
 </li>
-<li><p>Reviewer, <b>Machine Learning Journal (MLJ): 2017(1), 2018(1), 2019(1)</b></p>
+<li><p>Reviewer, Machine Learning Journal (<b>MLJ</b>): 2017(1), 2018(1), 2019(1)</p>
 </li>
 <li><p>Reviewer, Data Mining and Knowledge Discovery Journal (DMKD): 2016(1), 2017(1)</p>
 </li>
@@ -114,7 +114,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-06-25 22:14:53 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-07-16 12:20:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
