--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 Postdoctoral Researcher <br />
 <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>. <br /></p>
 </td></tr></table>
-<p>Research interests: Riemannian manifold, optimal transport/Wasserstein geometry, geometry in machine learning, topological data analysis, kernel methods, parametric optimization, metric learning. <br /></p>
+<p>Research interests: Optimal transport, tree-Wasserstein geometry, geometry in machine learning, Riemannian manifold, topological data analysis, kernel methods, parametric optimization, metric learning. <br /></p>
 <h2>Contact</h2>
 <div class="infoblock">
 <div class="blockcontent">
@@ -130,7 +130,7 @@ My CV is <a href="https://www.dropbox.com/s/q4vk20b2h0a7nsw/TamLe2019Apr.pdf?dl=
 <p><br /><br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-07-16 12:20:34 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2019-07-16 12:31:42 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
